k8s/argo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: auths-api
  namespace: tiktok
  labels:
    app: auths-api
    app.kubernetes.io/name: tiktok
    app.kubernetes.io/version: v1
    version: v1
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: auths-api-canary
      stableService: auths-api-stable
      trafficRouting:
        nginx:
          stableIngress: tiktok-ingress
      steps: # 发布的节奏
        - setWeight: 20
        - pause: { duration: 10 } # 会一直暂停
        - setWeight: 40
        - pause: { duration: 10 } # 暂停10s
        - setWeight: 60
        - pause: { duration: 10 }
        - setWeight: 80
        - pause: { duration: 10 }
        - setWeight: 100
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: auths-api
      app.kubernetes.io/name: tiktok
      app.kubernetes.io/version: v1
      version: v1
  template:
    metadata:
      labels:
        app: auths-api
        app.kubernetes.io/name: tiktok
        app.kubernetes.io/version: v1
        version: v1
    spec:
      volumes:
        - name: project-etc-volume
          hostPath:
            path: /data/etc
            type: DirectoryOrCreate
        - name: project-logs-volume
          hostPath:
            path: /data/logs
            type: DirectoryOrCreate
      containers:
        - name: auths-api
          image: 'swr.cn-south-1.myhuaweicloud.com/lzb/min-tiktok:v1'
          command: ["./apis/AuthsApi"]
          ports:
            - containerPort: 8888
              protocol: TCP
          volumeMounts:
            - name: project-etc-volume
              mountPath: /project/etc
            - name: project-logs-volume
              mountPath: /project/logs
          imagePullPolicy: Always
      imagePullSecrets:
        - name: harborsecret
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
