k8s/argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tiktok-ingress
  namespace: tiktok
spec:
  rules:
    - host: nginx.kubernetes-devops.cn
      http:
        paths:
          - path: /douyin/user/
            pathType: ImplementationSpecific
            backend:
              service:
                name: auths-api-stable
                port:
                  number: 8888
